--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -14,6 +14,18 @@
     text-align: center;
 }
 
+.main-section::after{
+    content: "";
+    position: absolute;
+    transform: rotate(180deg);
+    width: 100%;
+    height: 40%;
+    top: 0;
+    left: 0;
+    background: linear-gradient(180deg, rgba(15, 23, 22, 0) 0%, #0F1716 100%);
+
+}
+
 .main-section::before{
     content: "";
     position: absolute;
