--- a/src/components/future/future.module.css
+++ b/src/components/future/future.module.css
@@ -63,8 +63,12 @@
     transform: translateY(-140px);
     width: 100%;
     height: 563px;
- 
-    background: url("../../assets/imgs/background-coins-2.png");
+    background: #FFFFFF0A;
+    backdrop-filter: blur(15px);
+    max-width: 95%;
+    margin: 0 auto;
+    border-radius: 15px;
+    /* background: url("../../assets/imgs/background-coins-2.png"); */
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -77,7 +81,8 @@
 
 .future-text{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 40px;
     padding: 30px;
 }
 
