--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -1,6 +1,7 @@
 
 .cards-wrapper{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     margin-top: 100px;
     gap: 40px;
@@ -26,4 +27,10 @@
 
 .card > p{
     align-self: self-end;
+}
+
+@media (max-width: 720px) {
+    .cards-wrapper{
+        gap: 100px;
+    }
 }
