--- a/src/components/payouts/payouts.module.css
+++ b/src/components/payouts/payouts.module.css
@@ -50,3 +50,19 @@
     right: 0;
     width: 108px;
 }
+
+
+@media (max-width: 1000px) {
+    .payouts{
+        flex-direction: column;
+    }
+
+    .payouts > article{
+        width: 100%;
+    }
+
+    .payouts-cards{
+        width: 100%;
+        margin: 0;
+    }
+}
