some adaptive fixes
i wanna sleep so hard

--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -90,5 +90,13 @@
     cursor: pointer;
 }
 
-
+@media (max-width: 900px) {
+    .contactus{
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    .article,.aside{
+        width: 100%;
+    }
+}
 
