--- a/src/components/howtostart/howtostart.module.css
+++ b/src/components/howtostart/howtostart.module.css
@@ -54,7 +54,11 @@ p > a{
     right: -10%;
 }
 
-@media (max-width: 1300px) {
+.cards-wrapper{
+    display: flex;
+}
+
+@media (max-width: 900px) {
     .cards-wrapper{
         display: flex;
         flex-direction: column-reverse;
