--- a/src/components/benefits/benefits.module.css
+++ b/src/components/benefits/benefits.module.css
@@ -89,10 +89,21 @@ max-width: 190px;
     font-size: 24px;
 }
 
+@media (max-width: 1200px) {
+    .benefits{
+        padding: 0 10px;
+    }
+
+    .benefits-cards{
+        gap: 20px;
+    }
+}
+
 @media (max-width: 790px) {
     .benefits-cards{
         justify-content: center;
     }
+
 }
 
 @media (max-width: 550px) {
