--- a/src/components/connectwallet/connectwallet.module.css
+++ b/src/components/connectwallet/connectwallet.module.css
@@ -21,3 +21,13 @@
 .info > button{
     margin-top: 30px;
 }
+
+@media (max-width: 820px) {
+    .info > img{
+        width: 100%;
+    }
+
+    .info > h2{
+        font-size: 32px;
+    }
+}
