--- a/src/components/future/future.module.css
+++ b/src/components/future/future.module.css
@@ -107,3 +107,55 @@
 .future-card > p{
     margin-top: 20px;
 }
+
+@media (max-width: 900px) {
+    .future-title{
+        height: fit-content;
+    }
+    .future-title > h2{
+        font-size: 32px;
+    }
+
+    .coin-wrapper::before{
+        background-size: contain;
+        top: 0;
+        width: 70%;
+        height: 100%;
+
+    }
+
+    .future-title::after{
+        background-size: contain;
+        width: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .future-text{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+
+    .future-card{
+        margin: 0;
+    }
+}
+
+@media (max-width: 720px) {
+    .future-text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 680px) {
+    .future-title::after{
+        top: -55%;
+    }
+
+    .coin-wrapper::before{
+        top: 10%;
+    }
+}
