--- a/src/components/howtostart/howtostart.module.css
+++ b/src/components/howtostart/howtostart.module.css
@@ -56,6 +56,7 @@ p > a{
 
 .cards-wrapper{
     display: flex;
+    gap: 30px;
 }
 
 @media (max-width: 900px) {
@@ -63,5 +64,21 @@ p > a{
         display: flex;
         flex-direction: column-reverse;
         align-items: center;
+        gap: 10px;
+    }
+
+    .article{
+        display: flex;
+        justify-content: center;
+    }
+
+    .how-to-start-title{
+        padding: 0 20px;
+    }
+
+    .how-to-start > h2{
+        font-size: 32px;
+        text-align: left;
+        margin-left: 20px;
     }
 }
