--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -14,6 +14,13 @@
     text-align: center;
 }
 
+.h3{
+    width: 400px;
+    margin-top: 10px;
+    font-weight: normal;
+}
+
+
 .main-section::after{
     content: "";
     position: absolute;
@@ -67,4 +74,19 @@ h2{
     font-size: 50.4px;
     text-align: center;
     transform: translateY(-60px);
+}
+
+@media (max-width: 820px) {
+    h1{
+        margin-top: 40px;
+        font-size: 40px;
+    }
+
+    .main-coin{
+        width: 280px;
+    }
+
+    .h3{
+        font-size: 16px;
+    }
 }
