--- a/src/components/roadmap/roadmap.module.css
+++ b/src/components/roadmap/roadmap.module.css
@@ -42,12 +42,41 @@
 .roadmap-title{
     max-width: 1200px;
     width: 100%;
+    margin: 0 auto;
+    margin-top: 100px !important;
     justify-content: space-between;
     
     order: -1;
     display: flex;
+    align-items: center;
 }
 
 .roadmap-title > h2{
     transform: none;
+}
+
+.btns{
+    display: flex;
+}
+
+.btn{
+    background: none;
+    display: flex;
+}
+
+.btn:nth-child(1){
+    transform: rotate(180deg);
+    padding: 10px;
+}
+
+.btn:hover{
+    background: none;
+}
+
+@media (max-width: 820px) {
+   .roadmap-title > h2{
+    font-size: 32px;
+    text-align: left;
+   } 
+   
 }
