--- a/src/components/roadmap/swiper.css
+++ b/src/components/roadmap/swiper.css
@@ -97,3 +97,9 @@ padding: 30px;
   background: linear-gradient(90deg, #259945 50%, rgba(37, 153, 69, 0) 100%);
 
 }
+
+@media (max-width: 820px) {
+    .mySwiper{
+      padding-left: 20px;
+    }
+}
