--- a/src/components/trustbetmodes/tbetmodes.module.css
+++ b/src/components/trustbetmodes/tbetmodes.module.css
@@ -128,6 +128,23 @@
     }
 }
 
+@media (max-width: 1000px) {
+    .t-bet-bg{
+        top: -31%;
+    }
+}
+
+@media (max-width: 820px) {
+    .trustbet-modes > h3{
+        font-size: 24px;
+    }
+
+
+    .trustbet-modes-card{
+        margin: 0;
+    }
+}
+
 @media (max-width: 640px) {
     .trustbet-modes-cards{
         flex-direction: column;
