--- a/src/index.css
+++ b/src/index.css
@@ -41,3 +41,13 @@ h2{
     max-width: 100%;   
 }
 
+
+@media (max-width: 820px) {
+    section{
+        /* padding: 0 20px; */
+    }
+
+    .roadmap-container{
+        padding-left: 20px;
+    }
+}
