--- a/src/index.css
+++ b/src/index.css
@@ -1,53 +1,56 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-body{
-    background: #0F1716;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+html {
+  scroll-behavior: smooth;
 }
 
-*{
-    font-family: "Roboto", sans-serif;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-decoration: none;
-    color: white;
+body {
+  background: #0f1716;
 }
 
-.container{
-    max-width: 1200px;
-    margin: 0 auto;
+* {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  text-decoration: none;
+  color: white;
 }
 
-strong{
-    color: #88C13C;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-h2{
-    font-weight: 500;
+strong {
+  color: #88c13c;
 }
 
-.connect-wallet-btn{
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    gap: 20px;
-    font-size: 18px;
-    background: linear-gradient(180deg, #219653 0%, #299C35 100%);
-    padding: 20px 40px;
-    border: none;
-    border-radius: 20px;
+h2 {
+  font-weight: 500;
 }
 
-.roadmap-container{
-    max-width: 100%;   
+.connect-wallet-btn {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 20px;
+  font-size: 18px;
+  background: linear-gradient(180deg, #219653 0%, #299c35 100%);
+  padding: 20px 40px;
+  border: none;
+  border-radius: 20px;
 }
 
+.roadmap-container {
+  max-width: 100%;
+}
 
 @media (max-width: 820px) {
-    section{
-        /* padding: 0 20px; */
-    }
+  section {
+    /* padding: 0 20px; */
+  }
 
-    .roadmap-container{
-        padding-left: 20px;
-    }
+  .roadmap-container {
+    padding-left: 20px;
+  }
 }
