--- a/src/components/payouts/payouts.module.css
+++ b/src/components/payouts/payouts.module.css
@@ -1,79 +1,77 @@
-.payouts{
-    display: flex;
-    margin-top: 100px !important;
+.payouts {
+  display: flex;
+  margin-top: 100px !important;
 }
 
-.payouts > article{
-    width: 50%;
+.payouts > article {
+  width: 50%;
 }
 
-.payouts > article > h3{
-    font-size: 42px;
-    text-align: left;
+.payouts > article > h3 {
+  font-size: 42px;
+  text-align: left;
 }
 
-.payouts > article > p{
-    margin-top: 135px;
-    font-size: 18px;
+.payouts > article > p {
+  margin-top: 135px;
+  font-size: 18px;
 }
 
-.payouts-cards{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 50%;
-    margin-left: 100px;
+.payouts-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+  margin-left: 100px;
 }
 
-.payouts-card{
-    background: #FFFFFF0A;
-    padding: 25px;
-    border-radius: 15px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
+.payouts-card {
+  background: #ffffff0a;
+  padding: 25px;
+  border-radius: 15px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
-.payouts-card > h4{
-    color: #88C13C;
-    font-size: 24px;
-
+.payouts-card > h4 {
+  color: #88c13c;
+  font-size: 24px;
 }
 
-.payouts-card > p{
-    margin-top: 30px;
+.payouts-card > p {
+  margin-top: 30px;
 }
 
-.payouts-card-img{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 108px;
+.payouts-card-img {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 108px;
 }
-
 
 @media (max-width: 1000px) {
-    .payouts{
-        flex-direction: column;
-        gap: 20px;
-    }
+  .payouts {
+    flex-direction: column;
+    gap: 20px;
+  }
 
-    .payouts > article{
-        width: 100%;
-    }
+  .payouts > article {
+    width: 100%;
+  }
 
-    .payouts-cards{
-        width: 100%;
-        margin: 0;
-    }
+  .payouts-cards {
+    width: 100%;
+    margin: 0;
+  }
 }
 
 @media (max-width: 820px) {
-    .payouts{
-        padding: 0 20px;
-    }
+  .payouts {
+    padding: 0 20px;
+  }
 
-    .payouts > article > h3{
-        width: 70%;
-    }
+  .payouts > article > h3 {
+    width: 70%;
+  }
 }
