--- a/src/components/roadmap/roadmap.module.css
+++ b/src/components/roadmap/roadmap.module.css
@@ -1,82 +1,101 @@
-.section{
-    display: flex;
-    justify-content: end;
+.section {
+  display: flex;
+  justify-content: end;
 }
 
-.roadmap-bg{
-    position: absolute;
-        background: url("../../assets/imgs/roadma-bg-2.png"), 
-                        linear-gradient(180deg, #0F1716 0%, rgba(15, 23, 22, 0.893738) 15%, rgba(15, 23, 22, 0) 91.45%),
-                        linear-gradient(360deg, #0F1716 0%, rgba(15, 23, 22, 0.893738) 5.44%, rgba(15, 23, 22, 0) 33.18%);
+.roadmap-bg {
+  position: absolute;
+  background: url("../../assets/imgs/roadma-bg-2.png"),
+    linear-gradient(
+      180deg,
+      #0f1716 0%,
+      rgba(15, 23, 22, 0.893738) 15%,
+      rgba(15, 23, 22, 0) 91.45%
+    ),
+    linear-gradient(
+      360deg,
+      #0f1716 0%,
+      rgba(15, 23, 22, 0.893738) 5.44%,
+      rgba(15, 23, 22, 0) 33.18%
+    );
 
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-    object-fit: scale-down;
-    
-    height: 130%;
-  }
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  object-fit: scale-down;
 
-.roadmap-bg::before{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 20%;
-    background:linear-gradient(180deg, #0F1716 0%, rgba(15, 23, 22, 0.893738) 15%, rgba(15, 23, 22, 0) 91.45%) ;
-    top: 0;
-    left: 0;
+  height: 130%;
 }
 
-.roadmap-bg::after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 20%;
-    background:linear-gradient(180deg, #0F1716 0%, rgba(15, 23, 22, 0.893738) 15%, rgba(15, 23, 22, 0) 91.45%) ;
-    bottom: 0;
-    left: 0;
-    transform: rotate(180deg);
+.roadmap-bg::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  background: linear-gradient(
+    180deg,
+    #0f1716 0%,
+    rgba(15, 23, 22, 0.893738) 15%,
+    rgba(15, 23, 22, 0) 91.45%
+  );
+  top: 0;
+  left: 0;
 }
 
-.roadmap-title{
-    max-width: 1200px;
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 100px !important;
-    justify-content: space-between;
-    
-    order: -1;
-    display: flex;
-    align-items: center;
+.roadmap-bg::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 20%;
+  background: linear-gradient(
+    180deg,
+    #0f1716 0%,
+    rgba(15, 23, 22, 0.893738) 15%,
+    rgba(15, 23, 22, 0) 91.45%
+  );
+  bottom: 0;
+  left: 0;
+  transform: rotate(180deg);
 }
 
-.roadmap-title > h2{
-    transform: none;
+.roadmap-title {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  margin-top: 100px !important;
+  justify-content: space-between;
+
+  order: -1;
+  display: flex;
+  align-items: center;
 }
 
-.btns{
-    display: flex;
+.roadmap-title > h2 {
+  transform: none;
 }
 
-.btn{
-    background: none;
-    display: flex;
+.btns {
+  display: flex;
 }
 
-.btn:nth-child(1){
-    transform: rotate(180deg);
-    padding: 10px;
+.btn {
+  background: none;
+  display: flex;
 }
 
-.btn:hover{
-    background: none;
+.btn:nth-child(1) {
+  transform: rotate(180deg);
+  padding: 10px;
+}
+
+.btn:hover {
+  background: none;
 }
 
 @media (max-width: 820px) {
-   .roadmap-title > h2{
+  .roadmap-title > h2 {
     font-size: 32px;
     text-align: left;
-   } 
-   
+  }
 }
