--- a/src/components/trustbetmodes/tbetmodes.module.css
+++ b/src/components/trustbetmodes/tbetmodes.module.css
@@ -1,164 +1,160 @@
-.section{
-    position: relative;
-    margin-top: 150px;
+.section {
+  position: relative;
+  margin-top: 150px;
 }
 
-.t-bet-bg{
-    background: url("../../assets/imgs/t-bet-bg.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-    top: -50%;
-    left: 0;
-    width: 100%;
-    height: 1300px;
-    position: absolute;
-    
-    z-index: -1;
+.t-bet-bg {
+  background: url("../../assets/imgs/t-bet-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  top: -50%;
+  left: 0;
+  width: 100%;
+  height: 1300px;
+  position: absolute;
+
+  z-index: -1;
 }
 
-.trustbet-modes >h3{
-    font-size: 32px;
+.trustbet-modes > h3 {
+  font-size: 32px;
 }
 
-.trustbet-modes{
-    margin-top: 100px !important;
-
+.trustbet-modes {
+  margin-top: 100px !important;
 }
 
-.trustbet-modes-cards{
-    margin-top: 50px;
-    display: flex;
-    justify-content: space-between;
+.trustbet-modes-cards {
+  margin-top: 50px;
+  display: flex;
+  justify-content: space-between;
 }
 
-.trustbet-modes-card{
-    background: #FFFFFF0A;
-    backdrop-filter: blur(15px);
-    /* height: fit-content; */
-    margin-top: 100px;
-    border-radius: 15px;
+.trustbet-modes-card {
+  background: #ffffff0a;
+  backdrop-filter: blur(15px);
+  /* height: fit-content; */
+  margin-top: 100px;
+  border-radius: 15px;
 }
 
-.trustbet-modes-card:nth-child(1) > img{
-    margin-top: 27px;
+.trustbet-modes-card:nth-child(1) > img {
+  margin-top: 27px;
 }
 
-.trustbet-modes-card > img{
-    width: 360px;
+.trustbet-modes-card > img {
+  width: 360px;
 }
 
-.trustbet-modes-card > h4{
-    margin-top: 20px;
-    font-size: 24px;
-    color: #88C13C;
-    text-align: center;
-    font-weight: normal;
+.trustbet-modes-card > h4 {
+  margin-top: 20px;
+  font-size: 24px;
+  color: #88c13c;
+  text-align: center;
+  font-weight: normal;
 }
 
-.trustbet-modes-active-card{
-    background: #FFFFFF0A;
-    backdrop-filter: blur(15px);
-    margin-top: 80px;
-    transform: translateY(-50px);
-    height: 360px;
-    border-radius: 16px;
-
+.trustbet-modes-active-card {
+  background: #ffffff0a;
+  backdrop-filter: blur(15px);
+  margin-top: 80px;
+  transform: translateY(-50px);
+  height: 360px;
+  border-radius: 16px;
 }
 
-.trustbet-modes-active-card > img{
-    /* margin-bottom: 40px; */
-    margin-top: 19px;
-    
+.trustbet-modes-active-card > img {
+  /* margin-bottom: 40px; */
+  margin-top: 19px;
 }
 
-.trustbet-modes-active-card > h4{
-    color: #88C13C;
-    text-align: center;
-    padding-top: 20px;
-    font-size: 24px;
-    font-weight: normal;
+.trustbet-modes-active-card > h4 {
+  color: #88c13c;
+  text-align: center;
+  padding-top: 20px;
+  font-size: 24px;
+  font-weight: normal;
 }
 
-.trustbet-modes-card-2 > button{
-    padding: 25px 30px 25px 30px;
-    width: 100%;
+.trustbet-modes-card-2 > button {
+  padding: 25px 30px 25px 30px;
+  width: 100%;
 }
 
-.button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: none;
-    font-size: 20px;
-    gap: 20px;
-    background: linear-gradient(180deg, #219653 0%, #299C35 100%);
-    padding: 25px 30px;
-    border-radius: 20px;
-    cursor: pointer;
-    z-index: 10000;
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  font-size: 20px;
+  gap: 20px;
+  background: linear-gradient(180deg, #219653 0%, #299c35 100%);
+  padding: 25px 30px;
+  border-radius: 20px;
+  cursor: pointer;
+  z-index: 10000;
 }
 
-.trustbet-modes > h3{
-    font-weight: normal;
+.trustbet-modes > h3 {
+  font-weight: normal;
 }
 
-.trustbet-modes > h3 > strong{
-    font-weight: normal;
+.trustbet-modes > h3 > strong {
+  font-weight: normal;
 }
 
-.trustbet-modes > p{
-    text-align: center;
-    margin-top: 40px;
+.trustbet-modes > p {
+  text-align: center;
+  margin-top: 40px;
 }
 
 @media (max-width: 1010px) {
-    .trustbet-modes-cards{
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 40px;
-    }
+  .trustbet-modes-cards {
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+  }
 
-    .trustbet-modes-card > img{
-        width: 300px;
-    }
+  .trustbet-modes-card > img {
+    width: 300px;
+  }
 
-    .trustbet-modes-card-2{
-        order: 2;
-    }
+  .trustbet-modes-card-2 {
+    order: 2;
+  }
 }
 
 @media (max-width: 1000px) {
-    .t-bet-bg{
-        top: -31%;
-    }
+  .t-bet-bg {
+    top: -31%;
+  }
 }
 
 @media (max-width: 820px) {
-    .trustbet-modes > h3{
-        font-size: 24px;
-    }
+  .trustbet-modes > h3 {
+    font-size: 24px;
+  }
 
-
-    .trustbet-modes-card{
-        margin: 0;
-    }
+  .trustbet-modes-card {
+    margin: 0;
+  }
 }
 
 @media (max-width: 640px) {
-    .trustbet-modes-cards{
-        flex-direction: column;
-        /* width: fit-content; */
-        align-items: center;
-        align-content: center;
-        justify-content: center;
-        gap: 0;
-    }
-    .trustbet-modes-card{
-        width: fit-content;
-        margin-top: 30px;
-    }
-    .button{
-        display: none;
-    }
+  .trustbet-modes-cards {
+    flex-direction: column;
+    /* width: fit-content; */
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    gap: 0;
+  }
+  .trustbet-modes-card {
+    width: fit-content;
+    margin-top: 30px;
+  }
+  .button {
+    display: none;
+  }
 }
