--- a/src/components/benefits/benefits.module.css
+++ b/src/components/benefits/benefits.module.css
@@ -100,6 +100,10 @@ li.benefits-card:nth-child(2) > img:nth-child(2) {
   .benefits-cards {
     justify-content: center;
   }
+
+  .benefits > h2{
+    font-size: 24px;
+  }
 }
 
 @media (max-width: 550px) {
