--- a/src/components/mobile/header/headermobile.module.css
+++ b/src/components/mobile/header/headermobile.module.css
@@ -60,7 +60,7 @@
     width: 100%;
     z-index: 10000;
   }
-  
+
   .aside-footer{
     display: flex;
     flex-direction: column;
@@ -88,6 +88,12 @@
 @media (max-width: 820px) {
     .header{
         display: block;
+        /* position: fixed; */
+    }
+
+    .nav-list > li:nth-child(2){
+        position: fixed;
+        right: 40px;
     }
 }
 
