--- a/src/components/coin/coin.module.css
+++ b/src/components/coin/coin.module.css
@@ -6,6 +6,18 @@
   z-index: 5;
 }
 
+.main-coin {
+  position: absolute;
+  overflow: visible;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -80%);
+  z-index: 0;
+}
+.main-coin canvas {
+  overflow: visible;
+}
+
 @media (max-width: 820px) {
   .main-coin {
     width: 280px;
