--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -15,6 +15,8 @@
 }
 
 .h3 {
+  position: relative;
+  z-index: 100;
   width: 400px;
   margin-top: 10px;
   font-weight: normal;
@@ -77,6 +79,7 @@ h2 {
 .info {
   display: inline;
   position: relative;
+  z-index: 100;
   margin-left: 5px;
   background: #ffffff1a;
   border-radius: 200px;
