--- a/src/components/mobile/header/headermobile.module.css
+++ b/src/components/mobile/header/headermobile.module.css
@@ -1,108 +1,106 @@
-.header{
-    display: none;
-    position: absolute;
-    z-index: 100000;
-    /* padding: 40px; */
+.header {
+  display: none;
+  position: absolute;
+  z-index: 100000;
+  /* padding: 40px; */
 }
 
-.nav{
-    padding: 40px;
+.nav {
+  padding: 40px;
 }
 
-.nav-list{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.nav-list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.pop-up{
-    display: flex;
-    justify-content: end;
-    position: fixed;
-    width: 100%;
-    height: 100svh;
-    top: 0;
-    right: 0;
-    z-index: 100000;
-
+.pop-up {
+  display: flex;
+  justify-content: end;
+  position: fixed;
+  width: 100%;
+  height: 120svh;
+  top: 0;
+  right: 0;
+  z-index: 100000;
 }
 
-.aside{
-    width: 60%;
-    height: 100svh;
-    background: #0F1716;
-    z-index: 1010;
-    padding: 20px;
-
-
+.aside {
+  width: 60%;
+  height: 120svh;
+  background: #0f1716;
+  z-index: 1010;
+  padding: 20px;
 }
 
-.aside-list{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 30px;
-    margin-top: 50px;
+.aside-list {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 30px;
+  margin-top: 50px;
+  font-size: 24px;
 }
 
 .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    font-size: 20px;
-    gap: 20px;
-    background: linear-gradient(180deg, #219653 0%, #299c35 100%);
-    padding: 25px 30px;
-    border-radius: 20px;
-    cursor: pointer;
-    margin-top: 30%;
-    width: 100%;
-    z-index: 10000;
-  }
-
-  .aside-footer{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: end;
-    margin-top: 55%;
-  }
-
-.aside-socials{
-    display: flex;
-    gap: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  font-size: 20px;
+  gap: 20px;
+  background: linear-gradient(180deg, #219653 0%, #299c35 100%);
+  padding: 25px 30px;
+  border-radius: 20px;
+  cursor: pointer;
+  margin-top: 55%;
+  width: 100%;
+  z-index: 10000;
 }
 
-.aside-header{
-    display: flex;
-    justify-content: space-between;
+.aside-footer {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  align-items: end;
+  margin-top: 48%;
 }
 
-.pop-up > div{
-    width: 100%;
-    height: 100svh;
-    backdrop-filter: blur(15px);
+.aside-socials {
+  display: flex;
+  gap: 10px;
+}
+
+.aside-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pop-up > div {
+  width: 100%;
+  height: 100svh;
+  backdrop-filter: blur(15px);
 }
 
 @media (max-width: 820px) {
-    .header{
-        display: block;
-        /* position: fixed; */
-    }
+  .header {
+    display: block;
+    /* position: fixed; */
+  }
 
-    .nav-list > li:nth-child(2){
-        position: fixed;
-        right: 40px;
-    }
+  .nav-list > li:nth-child(2) {
+    position: fixed;
+    right: 40px;
+  }
 }
 
 @media (max-width: 500px) {
-    .pop-up > div{
-        display: none;
-    }
+  .pop-up > div {
+    display: none;
+  }
 
-    .aside{
-        width: 100%;
-    }
+  .aside {
+    width: 100%;
+  }
 }
