--- a/src/components/roadmap/roadmap.module.css
+++ b/src/components/roadmap/roadmap.module.css
@@ -94,8 +94,12 @@
 }
 
 @media (max-width: 820px) {
+  .roadmap-title {
+    flex-direction: column;
+  }
   .roadmap-title > h2 {
     font-size: 32px;
-    text-align: left;
+    /* text-align: left; */
   }
 }
+
