--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -92,7 +92,7 @@ span {
   border-radius: 20px;
   font-size: 24px;
   border: none;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 @media (max-width: 900px) {
