--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,53 +1,60 @@
-.modal{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #0F1716;
-    padding: 45px;
-    padding-bottom: 50px;
-    width: fit-content;
-    width: 700px;
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #0f1716;
+  padding: 45px;
+  padding-top: 70px;
+  padding-bottom: 50px;
+  width: fit-content;
+  width: 700px;
 }
 
-
-
-.modal-header{
-    padding-bottom: 20px;
-    font-size: 52px;
-    color: white;
-    text-align: center;
+.modal-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0f1716;
+  opacity: 0.8;
 }
 
-.modal-list{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.modal-header {
+  padding-bottom: 20px;
+  font-size: 52px;
+  color: white;
+  text-align: center;
 }
 
-.modal-item{
-    background: #FFFFFF0A;
-    border-radius: 15px;
-    padding: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-
+.modal-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.modal-item > a{
-    font-size: 17px;
+.modal-item {
+  background: #ffffff0a;
+  border-radius: 15px;
+  padding: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
+.modal-item > a {
+  font-size: 17px;
+}
 
-@media (max-width: 820px){
-    .modal{
-        width: 90%;
-    }
+@media (max-width: 820px) {
+  .modal {
+    width: 90%;
+  }
 }
 
 @media (max-width: 600px) {
-    .modal-header{
-        font-size: 26px;
-    }
+  .modal-header {
+    font-size: 26px;
+  }
 }
