--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,24 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"); */
 html {
   scroll-behavior: smooth;
 }
 
 body {
   background: #0f1716;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/geometria_bold.otf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Roboto";
+  src: url("/fonts/geometria_light.otf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
 }
 
 * {
