some coin changes

--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -16,26 +16,26 @@
   z-index: 10000;
 }
 
-.visible{
+.visible {
   transition: 1s;
   pointer-events: all;
   opacity: 1;
 }
 
-.non-visible{
+.non-visible {
   transition: 1s;
   pointer-events: none;
   opacity: 0;
 }
 
-
-@media(max-width: 350px){
-  .button{
-    position: fixed;
+@media (max-width: 500px) {
+  .button {
+    display: flex;
+    justify-content: center;
+    /* position: fixed; */
     width: 80%;
     /* bottom: 0px; */
     /* top: 100px; */
     /* margin-top: 200px; */
   }
-
 }
