--- a/src/components/coin/coin.module.css
+++ b/src/components/coin/coin.module.css
@@ -9,7 +9,7 @@
 .main-coin {
   position: absolute;
   overflow: visible;
-  top: 50%;
+  top: 70%;
   left: 50%;
   transform: translate(-50%, -80%);
   z-index: 0;
@@ -24,9 +24,22 @@
   }
 }
 
+@media (max-width: 820px) {
+  .main-coin {
+    top: 55%;
+    /* transform: translateY(-35%); */
+    width: fit-content !important;
+    height: 300px !important;
+  }
+
+  .main-coin canvas:nth-child(1) {
+    width: 300px !important;
+    height: 300px !important;
+  }
+}
+
 @media (max-width: 500px) {
   .main-coin {
     top: 45%;
-    width: 190px;
   }
 }
