--- a/src/components/coin/coin.module.css
+++ b/src/components/coin/coin.module.css
@@ -18,9 +18,15 @@
   overflow: visible;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1000px) {
   .main-coin {
     width: 280px;
+    width: fit-content !important;
+    height: 300px !important;
+  }
+  .main-coin > canvas:nth-child(1) {
+    width: 300px !important;
+    height: 300px !important;
   }
 }
 
