--- a/src/components/howtostart/howtostart.module.css
+++ b/src/components/howtostart/howtostart.module.css
@@ -59,6 +59,10 @@ p > a {
   gap: 30px;
 }
 
+.article > img {
+  width: 500px;
+}
+
 @media (max-width: 900px) {
   .how-to-start > h2 {
     text-align: center;
