--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -1,5 +1,6 @@
 .modal {
   position: fixed;
+  z-index: 1000;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -34,6 +35,10 @@
   border: none;
   color: #88c13c;
   cursor: pointer;
+  position: absolute;
+  font-size: 32px;
+  top: 0px;
+  right: 0;
 }
 
 .modal-list {
@@ -64,5 +69,10 @@
 @media (max-width: 600px) {
   .modal-header {
     font-size: 26px;
+  }
+
+  .modal-close {
+    font-size: 16px;
+    top: -10px;
   }
 }
