--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -11,8 +11,7 @@
   position: fixed;
   bottom: 50px;
   margin-top: 200px;
-  left: 50%;
-  transform: translateX(-50%);
+  right: 5%;
   z-index: 100;
 }
 
@@ -37,5 +36,13 @@
     /* bottom: 0px; */
     /* top: 100px; */
     /* margin-top: 200px; */
+  }
+}
+
+@media (max-width: 820px) {
+  .button {
+    right: none;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
