--- a/src/components/roadmap/roadmap.module.css
+++ b/src/components/roadmap/roadmap.module.css
@@ -96,10 +96,10 @@
 @media (max-width: 820px) {
   .roadmap-title {
     flex-direction: column;
+    transform: translateX(-7%);
   }
   .roadmap-title > h2 {
     font-size: 32px;
     /* text-align: left; */
   }
 }
-
