--- a/src/components/roadmap/swiper.css
+++ b/src/components/roadmap/swiper.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   font-size: 20px;
+  width: 500px;
   color: #333;
   padding: 30px;
   /* height: 560px; */
@@ -19,6 +20,12 @@
   border-radius: 15px;
   position: relative;
   backdrop-filter: blur(10px);
+}
+
+@media (max-width: 390px) {
+  .swiper-slide-1 {
+    width: 320px;
+  }
 }
 
 /* .swiper-slide-1::before{
