--- a/src/components/cards/cards.module.css
+++ b/src/components/cards/cards.module.css
@@ -25,7 +25,7 @@
 .section-subtitle {
   text-align: center;
   width: 1100px;
-  font-weight: normal;
+  font-weight: 300;
   margin: 0 auto;
 }
 
@@ -38,6 +38,7 @@
 
 .card > p {
   align-self: self-end;
+  font-weight: 300;
 }
 
 @media (max-width: 1140px) {
