--- a/src/components/contactus/contactus.module.css
+++ b/src/components/contactus/contactus.module.css
@@ -29,6 +29,10 @@
   gap: 20px;
 }
 
+.aside-header > p {
+  font-weight: 300;
+}
+
 .aside-links {
   margin-top: 30px;
   width: 45%;
@@ -41,7 +45,7 @@
 span {
   /* display: flex; */
   /* gap: 10px; */
-  color: #3c4141;
+  color: white;
 }
 
 .aside-links > a {
