--- a/src/components/payouts/payouts.module.css
+++ b/src/components/payouts/payouts.module.css
@@ -14,6 +14,7 @@
 
 .payouts > article > p {
   margin-top: 135px;
+  font-weight: 300;
   font-size: 18px;
 }
 
@@ -41,6 +42,7 @@
 
 .payouts-card > p {
   margin-top: 30px;
+  font-weight: 300;
 }
 
 .payouts-card-img {
