--- a/src/components/trustbetmodes/tbetmodes.module.css
+++ b/src/components/trustbetmodes/tbetmodes.module.css
@@ -106,6 +106,7 @@
 
 .trustbet-modes > p {
   text-align: center;
+  font-weight: 300;
   margin-top: 40px;
 }
 
@@ -135,7 +136,7 @@
   .trustbet-modes > h3 {
     font-size: 24px;
   }
-  .t-bet-bg{
+  .t-bet-bg {
     background-size: auto;
     height: 100%;
   }
