--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -32,7 +32,10 @@
     display: flex;
     justify-content: center;
     /* position: fixed; */
-    width: 80%;
+    font-size: 15px;
+    padding: 25px 30px;
+    bottom: 20px;
+    width: 55%;
     /* bottom: 0px; */
     /* top: 100px; */
     /* margin-top: 200px; */
