add puchase modal

--- a/src/components/connectwallet/connectwallet.module.scss
+++ b/src/components/connectwallet/connectwallet.module.scss
@@ -31,3 +31,11 @@
     font-size: 32px;
   }
 }
+
+.account {
+  flex: 1;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
