fix main section space

--- a/src/components/main/main.module.css
+++ b/src/components/main/main.module.css
@@ -185,11 +185,12 @@ h2 {
   }
 
   .main-section {
-    height: 110svh;
+    height: 130svh;
   }
 
   .button {
     display: flex;
+    margin-top: 40px;
   }
   .gif {
     align-self: center;
